--- a/Ex4-1.html
+++ b/Ex4-1.html
@@ -25,7 +25,7 @@
 <body>
 
 <h1>Exercise 4.1 – Draw SVGs</h1>
-<p>SVG で家と庭を描画し、<code>&lt;g&gt;</code> グループと <code>transform/translate</code> を使って窓を配置しています。</p>
+<p>SVG , Idraw house<code>&lt;g&gt;</code> group <code>transform/translate</code> put windows.</p>
 
 <figure>
   <svg id="scene" width="820" height="520" viewBox="0 0 820 520" aria-label="House and garden with SVG">
